# Not-another-completely-heuristic-operating-system

./: README.md
assignment2/nachos-3.4/code/filesys/: nachos
assignment2/nachos-3.4/code/network/: nachos
assignment2/nachos-3.4/code/test/: execTest.c  execTest.coff  halt
assignment2/nachos-3.4/code/threads/: nachos
assignment2/nachos-3.4/code/userprog/: Makefile  nachos
assignment3/nachos-3.4/assignment3Upload1/1305023/code/: CMakeLists.txt  Makefile.common  makeLog.txt
assignment3/nachos-3.4/assignment3Upload1/1305023/code/filesys/: Makefile  openfile.h
assignment3/nachos-3.4/assignment3Upload1/1305023/code/machine/: machine.cc  mipssim.cc  translate.h
assignment3/nachos-3.4/assignment3Upload1/1305023/code/network/: nachos
assignment3/nachos-3.4/assignment3Upload1/1305023/code/test/: array  exectest.c  matmult
assignment3/nachos-3.4/assignment3Upload1/1305023/code/threads/: Makefile  main.cc  synch.cc  system.h  thread.cc  thread.h  threadtest.cc  utility.h
assignment3/nachos-3.4/assignment3Upload1/1305023/code/threads/PC_Problem/: Consumer.cc
assignment3/nachos-3.4/assignment3Upload1/1305023/code/userprog/: IDManager.cc  MemoryManager.cc  MemoryManager.h  addrspace.cc  my_utility.h  nachos  progtest.cc
assignment3/nachos-3.4/code/: Makefile.common  run.sh
assignment3/nachos-3.4/code/filesys/: Makefile  filesys.h  nachos
assignment3/nachos-3.4/code/machine/: machine.cc  machine.h  mipssim.cc  translate.cc  translate.h
assignment3/nachos-3.4/code/network/: Makefile  nachos
assignment3/nachos-3.4/code/test/: Makefile  exectest  exectest.c  exectest.coff  exectest2  exectest2.c  exectest2.coff  matmult
code/: Makefile.common
code/filesys/: Makefile  nachos
code/network/: nachos
code/test/: codeDataTest.c  halt
code/threads/: nachos  synch.cc
code/userprog/: Makefile  addrspace.cc  addrspace.h  memorymanager.cc  memorymanager.h  nachos  progtest.cc
code/vm/: Makefile  nachos
nachos-3.4/code/: Makefile.common
nachos-3.4/code/filesys/: Makefile  nachos
nachos-3.4/code/network/: Makefile  nachos
nachos-3.4/code/test/: Makefile  codeDataTest  codeDataTest.c  codeDataTest.coff
nachos-3.4/code/threads/: Makefile  makedep  nachos  system.cc
nachos-3.4/code/userprog/: Makefile  addrspace.cc  exception.cc  nachos  processtable.cc  processtable.h  progtest.cc  threadSafeSynchronizedConsole.cc  threadSafeSynchronizedConsole.h
nachos-3.4/code/vm/: Makefile  nachos
(+50 files in other folders)
